Remove requirements for update_refresh
